--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/WillieDavonSmalls/mongoose_scraper/issues"
   },
-  "homepage": "https://github.com/WillieDavonSmalls/mongoose_scraper#readme"
+  "homepage": "https://github.com/WillieDavonSmalls/mongoose_scraper#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.5",
+    "morgan": "^1.9.0",
+    "request": "^2.87.0"
+  }
 }
