--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "mongoose": "5.0.10",
     "morgan": "^1.9.0",
+    "path": "^0.12.7",
     "request": "^2.87.0"
   }
 }
